Implementacao/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_declaracoes
Rule 2     lista_declaracoes -> lista_declaracoes declaracao
Rule 3     lista_declaracoes -> declaracao
Rule 4     declaracao -> declaracao_variaveis
Rule 5     declaracao -> inicializacao_variaveis
Rule 6     declaracao -> declaracao_funcao
Rule 7     declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis
Rule 8     declaracao_variaveis -> tipo DOIS_PONTOS error
Rule 9     declaracao_variaveis -> tipo DOIS_PONTOS
Rule 10    inicializacao_variaveis -> atribuicao
Rule 11    tipo -> INTEIRO
Rule 12    tipo -> FLUTUANTE
Rule 13    declaracao_funcao -> tipo cabecalho
Rule 14    declaracao_funcao -> cabecalho
Rule 15    lista_variaveis -> lista_variaveis VIRGULA var
Rule 16    lista_variaveis -> var
Rule 17    var -> ID
Rule 18    var -> ID indice
Rule 19    indice -> indice ABRE_COLCHETES expressao FECHA_COLCHETES
Rule 20    indice -> ABRE_COLCHETES expressao FECHA_COLCHETES
Rule 21    cabecalho -> ID ABRE_PARENTESES lista_parametros FECHA_PARENTESES corpo FIM
Rule 22    cabecalho -> ID ABRE_PARENTESES lista_parametros FECHA_PARENTESES corpo
Rule 23    lista_parametros -> lista_parametros VIRGULA parametro
Rule 24    lista_parametros -> parametro
Rule 25    lista_parametros -> vazio
Rule 26    acao -> expressao
Rule 27    acao -> declaracao_variaveis
Rule 28    acao -> se
Rule 29    acao -> repita
Rule 30    acao -> leia
Rule 31    acao -> escreva
Rule 32    acao -> retorna
Rule 33    corpo -> corpo acao
Rule 34    corpo -> vazio
Rule 35    parametro -> tipo DOIS_PONTOS ID
Rule 36    parametro -> parametro ABRE_COLCHETES FECHA_COLCHETES
Rule 37    se -> SE expressao ENTAO corpo FIM
Rule 38    se -> SE expressao ENTAO corpo SENAO corpo FIM
Rule 39    se -> SE expressao error
Rule 40    repita -> REPITA corpo ATE expressao
Rule 41    atribuicao -> var ATRIBUICAO expressao
Rule 42    leia -> LEIA ABRE_PARENTESES var FECHA_PARENTESES
Rule 43    escreva -> ESCREVA ABRE_PARENTESES expressao FECHA_PARENTESES
Rule 44    retorna -> RETORNA ABRE_PARENTESES expressao FECHA_PARENTESES
Rule 45    expressao -> expressao_logica
Rule 46    expressao -> atribuicao
Rule 47    expressao_logica -> expressao_simples
Rule 48    expressao_logica -> expressao_logica operador_logico expressao_simples
Rule 49    expressao_simples -> expressao_aditiva
Rule 50    expressao_simples -> expressao_simples operador_relacional expressao_aditiva
Rule 51    expressao_aditiva -> expressao_multiplicativa
Rule 52    expressao_aditiva -> expressao_aditiva operador_soma expressao_multiplicativa
Rule 53    expressao_multiplicativa -> expressao_unaria
Rule 54    expressao_multiplicativa -> expressao_multiplicativa operador_multiplicacao expressao_unaria
Rule 55    expressao_unaria -> fator
Rule 56    expressao_unaria -> operador_soma fator
Rule 57    expressao_unaria -> operador_negacao fator
Rule 58    operador_relacional -> OPERADOR_RELACIONAL_MENOR
Rule 59    operador_relacional -> OPERADOR_RELACIONAL_MAIOR
Rule 60    operador_relacional -> OPERADOR_RELACIONAL_IGUAL
Rule 61    operador_relacional -> OPERADOR_RELACIONAL_DIFERENTE
Rule 62    operador_relacional -> OPERADOR_RELACIONAL_MENOR_IGUAL
Rule 63    operador_relacional -> OPERADOR_RELACIONAL_MAIOR_IGUAL
Rule 64    operador_soma -> OPERADOR_SOMA
Rule 65    operador_soma -> OPERADOR_SUBTRACAO
Rule 66    operador_logico -> OPERADOR_LOGICO_E
Rule 67    operador_logico -> OPERADOR_LOGICO_OU
Rule 68    operador_negacao -> OPERADOR_NEGACAO
Rule 69    operador_multiplicacao -> OPERADOR_MULTIPLICACAO
Rule 70    operador_multiplicacao -> OPERADOR_DIVISAO
Rule 71    fator -> ABRE_PARENTESES expressao FECHA_PARENTESES
Rule 72    fator -> var
Rule 73    fator -> chamada_funcao
Rule 74    fator -> numero
Rule 75    numero -> NUMERO_INTEIRO
Rule 76    numero -> NUMERO_FLUTUANTE
Rule 77    numero -> NOTACAO_CIENTIFICA
Rule 78    chamada_funcao -> ID ABRE_PARENTESES lista_argumentos FECHA_PARENTESES
Rule 79    lista_argumentos -> lista_argumentos VIRGULA expressao
Rule 80    lista_argumentos -> expressao
Rule 81    lista_argumentos -> vazio
Rule 82    vazio -> <empty>

Terminals, with rules where they appear

ABRE_COLCHETES       : 19 20 36
ABRE_PARENTESES      : 21 22 42 43 44 71 78
ATE                  : 40
ATRIBUICAO           : 41
DOIS_PONTOS          : 7 8 9 35
ENTAO                : 37 38
ESCREVA              : 43
FECHA_COLCHETES      : 19 20 36
FECHA_PARENTESES     : 21 22 42 43 44 71 78
FIM                  : 21 37 38
FLUTUANTE            : 12
ID                   : 17 18 21 22 35 78
INTEIRO              : 11
LEIA                 : 42
NOTACAO_CIENTIFICA   : 77
NUMERO_FLUTUANTE     : 76
NUMERO_INTEIRO       : 75
OPERADOR_DIVISAO     : 70
OPERADOR_LOGICO_E    : 66
OPERADOR_LOGICO_OU   : 67
OPERADOR_MULTIPLICACAO : 69
OPERADOR_NEGACAO     : 68
OPERADOR_RELACIONAL_DIFERENTE : 61
OPERADOR_RELACIONAL_IGUAL : 60
OPERADOR_RELACIONAL_MAIOR : 59
OPERADOR_RELACIONAL_MAIOR_IGUAL : 63
OPERADOR_RELACIONAL_MENOR : 58
OPERADOR_RELACIONAL_MENOR_IGUAL : 62
OPERADOR_SOMA        : 64
OPERADOR_SUBTRACAO   : 65
REPITA               : 40
RETORNA              : 44
SE                   : 37 38 39
SENAO                : 38
VIRGULA              : 15 23 79
error                : 8 39

Nonterminals, with rules where they appear

acao                 : 33
atribuicao           : 10 46
cabecalho            : 13 14
chamada_funcao       : 73
corpo                : 21 22 33 37 38 38 40
declaracao           : 2 3
declaracao_funcao    : 6
declaracao_variaveis : 4 27
escreva              : 31
expressao            : 19 20 26 37 38 39 40 41 43 44 71 79 80
expressao_aditiva    : 49 50 52
expressao_logica     : 45 48
expressao_multiplicativa : 51 52 54
expressao_simples    : 47 48 50
expressao_unaria     : 53 54
fator                : 55 56 57
indice               : 18 19
inicializacao_variaveis : 5
leia                 : 30
lista_argumentos     : 78 79
lista_declaracoes    : 1 2
lista_parametros     : 21 22 23
lista_variaveis      : 7 15
numero               : 74
operador_logico      : 48
operador_multiplicacao : 54
operador_negacao     : 57
operador_relacional  : 50
operador_soma        : 52 56
parametro            : 23 24 36
programa             : 0
repita               : 29
retorna              : 32
se                   : 28
tipo                 : 7 8 9 13 35
var                  : 15 16 41 42 72
vazio                : 25 34 81

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_declaracoes
    (2) lista_declaracoes -> . lista_declaracoes declaracao
    (3) lista_declaracoes -> . declaracao
    (4) declaracao -> . declaracao_variaveis
    (5) declaracao -> . inicializacao_variaveis
    (6) declaracao -> . declaracao_funcao
    (7) declaracao_variaveis -> . tipo DOIS_PONTOS lista_variaveis
    (8) declaracao_variaveis -> . tipo DOIS_PONTOS error
    (9) declaracao_variaveis -> . tipo DOIS_PONTOS
    (10) inicializacao_variaveis -> . atribuicao
    (13) declaracao_funcao -> . tipo cabecalho
    (14) declaracao_funcao -> . cabecalho
    (11) tipo -> . INTEIRO
    (12) tipo -> . FLUTUANTE
    (41) atribuicao -> . var ATRIBUICAO expressao
    (21) cabecalho -> . ID ABRE_PARENTESES lista_parametros FECHA_PARENTESES corpo FIM
    (22) cabecalho -> . ID ABRE_PARENTESES lista_parametros FECHA_PARENTESES corpo
    (17) var -> . ID
    (18) var -> . ID indice

    INTEIRO         shift and go to state 10
    FLUTUANTE       shift and go to state 11
    ID              shift and go to state 13

    programa                       shift and go to state 1
    lista_declaracoes              shift and go to state 2
    declaracao                     shift and go to state 3
    declaracao_variaveis           shift and go to state 4
    inicializacao_variaveis        shift and go to state 5
    declaracao_funcao              shift and go to state 6
    tipo                           shift and go to state 7
    atribuicao                     shift and go to state 8
    cabecalho                      shift and go to state 9
    var                            shift and go to state 12

state 1

    (0) S' -> programa .



state 2

    (1) programa -> lista_declaracoes .
    (2) lista_declaracoes -> lista_declaracoes . declaracao
    (4) declaracao -> . declaracao_variaveis
    (5) declaracao -> . inicializacao_variaveis
    (6) declaracao -> . declaracao_funcao
    (7) declaracao_variaveis -> . tipo DOIS_PONTOS lista_variaveis
    (8) declaracao_variaveis -> . tipo DOIS_PONTOS error
    (9) declaracao_variaveis -> . tipo DOIS_PONTOS
    (10) inicializacao_variaveis -> . atribuicao
    (13) declaracao_funcao -> . tipo cabecalho
    (14) declaracao_funcao -> . cabecalho
    (11) tipo -> . INTEIRO
    (12) tipo -> . FLUTUANTE
    (41) atribuicao -> . var ATRIBUICAO expressao
    (21) cabecalho -> . ID ABRE_PARENTESES lista_parametros FECHA_PARENTESES corpo FIM
    (22) cabecalho -> . ID ABRE_PARENTESES lista_parametros FECHA_PARENTESES corpo
    (17) var -> . ID
    (18) var -> . ID indice

    $end            reduce using rule 1 (programa -> lista_declaracoes .)
    INTEIRO         shift and go to state 10
    FLUTUANTE       shift and go to state 11
    ID              shift and go to state 13

    declaracao                     shift and go to state 14
    declaracao_variaveis           shift and go to state 4
    inicializacao_variaveis        shift and go to state 5
    declaracao_funcao              shift and go to state 6
    tipo                           shift and go to state 7
    atribuicao                     shift and go to state 8
    cabecalho                      shift and go to state 9
    var                            shift and go to state 12

state 3

    (3) lista_declaracoes -> declaracao .

    INTEIRO         reduce using rule 3 (lista_declaracoes -> declaracao .)
    FLUTUANTE       reduce using rule 3 (lista_declaracoes -> declaracao .)
    ID              reduce using rule 3 (lista_declaracoes -> declaracao .)
    $end            reduce using rule 3 (lista_declaracoes -> declaracao .)


state 4

    (4) declaracao -> declaracao_variaveis .

    INTEIRO         reduce using rule 4 (declaracao -> declaracao_variaveis .)
    FLUTUANTE       reduce using rule 4 (declaracao -> declaracao_variaveis .)
    ID              reduce using rule 4 (declaracao -> declaracao_variaveis .)
    $end            reduce using rule 4 (declaracao -> declaracao_variaveis .)


state 5

    (5) declaracao -> inicializacao_variaveis .

    INTEIRO         reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    FLUTUANTE       reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    ID              reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    $end            reduce using rule 5 (declaracao -> inicializacao_variaveis .)


state 6

    (6) declaracao -> declaracao_funcao .

    INTEIRO         reduce using rule 6 (declaracao -> declaracao_funcao .)
    FLUTUANTE       reduce using rule 6 (declaracao -> declaracao_funcao .)
    ID              reduce using rule 6 (declaracao -> declaracao_funcao .)
    $end            reduce using rule 6 (declaracao -> declaracao_funcao .)


state 7

    (7) declaracao_variaveis -> tipo . DOIS_PONTOS lista_variaveis
    (8) declaracao_variaveis -> tipo . DOIS_PONTOS error
    (9) declaracao_variaveis -> tipo . DOIS_PONTOS
    (13) declaracao_funcao -> tipo . cabecalho
    (21) cabecalho -> . ID ABRE_PARENTESES lista_parametros FECHA_PARENTESES corpo FIM
    (22) cabecalho -> . ID ABRE_PARENTESES lista_parametros FECHA_PARENTESES corpo

    DOIS_PONTOS     shift and go to state 15
    ID              shift and go to state 17

    cabecalho                      shift and go to state 16

state 8

    (10) inicializacao_variaveis -> atribuicao .

    INTEIRO         reduce using rule 10 (inicializacao_variaveis -> atribuicao .)
    FLUTUANTE       reduce using rule 10 (inicializacao_variaveis -> atribuicao .)
    ID              reduce using rule 10 (inicializacao_variaveis -> atribuicao .)
    $end            reduce using rule 10 (inicializacao_variaveis -> atribuicao .)


state 9

    (14) declaracao_funcao -> cabecalho .

    INTEIRO         reduce using rule 14 (declaracao_funcao -> cabecalho .)
    FLUTUANTE       reduce using rule 14 (declaracao_funcao -> cabecalho .)
    ID              reduce using rule 14 (declaracao_funcao -> cabecalho .)
    $end            reduce using rule 14 (declaracao_funcao -> cabecalho .)


state 10

    (11) tipo -> INTEIRO .

    DOIS_PONTOS     reduce using rule 11 (tipo -> INTEIRO .)
    ID              reduce using rule 11 (tipo -> INTEIRO .)


state 11

    (12) tipo -> FLUTUANTE .

    DOIS_PONTOS     reduce using rule 12 (tipo -> FLUTUANTE .)
    ID              reduce using rule 12 (tipo -> FLUTUANTE .)


state 12

    (41) atribuicao -> var . ATRIBUICAO expressao

    ATRIBUICAO      shift and go to state 18


state 13

    (21) cabecalho -> ID . ABRE_PARENTESES lista_parametros FECHA_PARENTESES corpo FIM
    (22) cabecalho -> ID . ABRE_PARENTESES lista_parametros FECHA_PARENTESES corpo
    (17) var -> ID .
    (18) var -> ID . indice
    (19) indice -> . indice ABRE_COLCHETES expressao FECHA_COLCHETES
    (20) indice -> . ABRE_COLCHETES expressao FECHA_COLCHETES

    ABRE_PARENTESES shift and go to state 19
    ATRIBUICAO      reduce using rule 17 (var -> ID .)
    ABRE_COLCHETES  shift and go to state 21

    indice                         shift and go to state 20

state 14

    (2) lista_declaracoes -> lista_declaracoes declaracao .

    INTEIRO         reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    FLUTUANTE       reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    ID              reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    $end            reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)


state 15

    (7) declaracao_variaveis -> tipo DOIS_PONTOS . lista_variaveis
    (8) declaracao_variaveis -> tipo DOIS_PONTOS . error
    (9) declaracao_variaveis -> tipo DOIS_PONTOS .
    (15) lista_variaveis -> . lista_variaveis VIRGULA var
    (16) lista_variaveis -> . var
    (17) var -> . ID
    (18) var -> . ID indice
